--- a/ClubSoft/Views/Shared/_Layout.cshtml
+++ b/ClubSoft/Views/Shared/_Layout.cshtml
@@ -101,11 +101,13 @@
             </div>
         </div>
     }
-    <div>
+    else{
+        <div>
         <main role="main">
             @RenderBody()
         </main>
     </div>
+    }
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
