roles y vista persona

--- a/ClubSoft/Views/Home/Index.cshtml
+++ b/ClubSoft/Views/Home/Index.cshtml
@@ -87,7 +87,7 @@
                 <div class="card estilocard text-black">
                     <div class="card-body">
                         <i class="fa-solid fa-cart-shopping iconofunciones"></i>
-                        <h5 class="card-title">TIENDA ONLINE</h5>
+                        <h5 class="card-title">REGISTRO DE VENTAS</h5>
                         <p class="card-text parrafo">Compra de productos, entradas y buffet.</p>
                     </div>
                 </div>
