--- a/ClubSoft/Views/Home/Inicio.cshtml
+++ b/ClubSoft/Views/Home/Inicio.cshtml
@@ -108,7 +108,7 @@
           <div class="card-body">
             <div class="row">
               <div class="col-3 text-center">
-                <i class="fa-solid fa-list fa-3x mb-3"></i></i>
+                <i class="fa-solid fa-list fa-3x mb-3"></i>
               </div>
               <div class="col-9">
                 <h5 class="titulo-card">Productos</h5>
@@ -127,13 +127,32 @@
           <div class="card-body">
             <div class="row">
               <div class="col-3 text-center">
-                <i class="fa-solid fa-list fa-3x mb-3"></i></i>
+                <i class="fa-solid fa-list fa-3x mb-3"></i>
               </div>
               <div class="col-9">
                 <h5 class="titulo-card">Tipos Productos</h5>
               </div>
               <div class="text-end w-100">
                 <a class="btn btn-primary" asp-controller="TipoProductos" asp-action="Index">
+                  <i class="fas fa-arrow-right ml-2"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 mb-4 col-sm-12">
+        <div class="card custom-card d-flex align-items-center">
+          <div class="card-body">
+            <div class="row">
+              <div class="col-3 text-center">
+                <i class="fa-solid fa-cart-shopping fa-3x mb-3"></i>
+              </div>
+              <div class="col-9">
+                <h5 class="titulo-card">Ventas</h5>
+              </div>
+              <div class="text-end w-100">
+                <a class="btn btn-primary" asp-controller="Ventas" asp-action="Index">
                   <i class="fas fa-arrow-right ml-2"></i>
                 </a>
               </div>
