--- a/ClubSoft/Views/Localidades/Index.cshtml
+++ b/ClubSoft/Views/Localidades/Index.cshtml
@@ -33,7 +33,7 @@
     <h3 class="card-header text-end"><i class="fa-solid fa-table pe-2"></i>LOCALIDADES</h3>
     <div class="card-body mb-5">
       <div class="table-responsive" style="height: 350px; overflow-y: auto;">
-      <table class="table table-hover">
+      <table class="table table-hover align-middle">
         <thead>
           <tr>
             <th>Nombre</th>
