--- a/ClubSoft/Areas/Identity/Pages/Account/Login.cshtml
+++ b/ClubSoft/Areas/Identity/Pages/Account/Login.cshtml
@@ -29,7 +29,7 @@
                     </label>
                 </div>
                 <div>
-                    <button id="login-submit" type="submit" class="btn-dark btn-lg m-2">Ingresar</button>
+                    <button id="login-submit" type="submit" class="btn btn-dark btn-lg m-2">Ingresar</button>
                 </div>
                 <div>
                     <br>
