--- a/ClubSoft/Views/Productos/Index.cshtml
+++ b/ClubSoft/Views/Productos/Index.cshtml
@@ -21,16 +21,16 @@
       </div>
       <div class="card-body mb-5">
         <div class="table-responsive" style="height: 450px; overflow-y: auto;">
-          <table class="table table-hover">
+          <table class="table table-hover align-middle">
             <thead>
               <tr>
                 @* <th>Imagen</th> *@
                 <th>Nombre</th>
                 <th>Precio</th>
-                <th>Cantidad</th>
-                <th>Descripcion</th>
-                <th>Estado</th>
-                <th>Tipo de Producto</th>
+                <th class="text-center">Cantidad</th>
+                <th class="text-center">Descripcion</th>
+                <th class="text-center">Tipo de Producto</th>
+                <th class="text-center">Estado</th>
                 <th style="width: 70px"></th>
                 <th style="width: 70px"></th>
               </tr>
@@ -91,10 +91,9 @@
                 </span>
               </div>
 
-              <div class="mb-2 form-check">
-                <input type="checkbox" class="form-check-input" id="ProductoEstado" />
-                <label for="ProductoEstado" class="form-check-label">Estado</label>
-              </div>
+             
+              <input type="hidden" class="form-check-input" id="ProductoEstado" value="true" />
+             
 
               <div class="mb-2">
                 <label for="TipoProductoID" class="form-label fw-bold">Tipo de Productos</label>
