--- a/ClubSoft/Views/TipoEventos/Index.cshtml
+++ b/ClubSoft/Views/TipoEventos/Index.cshtml
@@ -26,7 +26,7 @@
     <h3 class="card-header text-end"><i class="fa-solid fa-table pe-2"></i>TIPOS DE EVENTOS</h3>
     <div class="card-body">
       <div class="table-responsive" style="height: 500px; overflow-y: auto;">
-        <table class="table table-hover">
+        <table class="table table-hover align-middle">
           <thead>
             <tr>
               <th style="position: sticky; top: 0; background-color: white;">Nombre</th>
