--- a/ClubSoft/Views/Personas/Index.cshtml
+++ b/ClubSoft/Views/Personas/Index.cshtml
@@ -49,7 +49,7 @@
                 <div class="modal-header">
                     <h5 class="modal-title text-color" id="ModalTitulo">Personas</h5>
                     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
-                        aria-label="Close"></button>
+                        aria-label="Close" onclick="LimpiarModal()"></button>
                 </div>
                 <div class="modal-body">
                     <form>
