--- a/ClubSoft/Views/Shared/_Layout.cshtml
+++ b/ClubSoft/Views/Shared/_Layout.cshtml
@@ -31,6 +31,8 @@
                         asp-action="Inicio"><i class="fa-solid fa-house pe-2"></i>Inicio</a>
                     <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Personas"
                         asp-action="Index"><i class="fas fa-users pe-2"></i>Personas</a>
+                        <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="CuentaCorrientes"
+                        asp-action="Index"><i class="fas fa-users pe-2"></i>CuentaCorrientes</a>
 
                     <!-- Dropdown para Eventos -->
                     <div class="list-group-item p-0">
