--- a/ClubSoft/Views/CuentaCorrientes/Index.cshtml
+++ b/ClubSoft/Views/CuentaCorrientes/Index.cshtml
@@ -64,27 +64,45 @@
                         <div class="mb-2 col-6">
                             <label for="Saldo" class="form-label fw-bold">Saldo *</label>
                             <input type="decimal" class="form-control" id="CuentaCorrienteSaldo">
+                            <span id="errorMensajeSaldo" style="color:red; display:none; font-size: 15px; padding-left: 4px;">
+                  <i class="fa-solid fa-circle-exclamation pe-1"></i>Debe ingresar el monto
+                </span>
                         </div>
 
                         <div class="mb-2 col-6">
                             <label for="Ingreso" class="form-label fw-bold">Ingreso *</label>
                             <input type="decimal" class="form-control" id="CuentaCorrienteIngreso">
+                            <span id="errorMensajeIngreso" style="color:red; display:none; font-size: 15px; padding-left: 4px;">
+                  <i class="fa-solid fa-circle-exclamation pe-1"></i>Debe ingresar el monto
+                </span>
                         </div>
 
                         <div class="mb-2 col-6">
                             <label for="Egreso" class="form-label fw-bold">Egreso *</label>
                             <input type="decimal" class="form-control" id="CuentaCorrienteEgreso">
+                            <span id="errorMensajeEgreso" style="color:red; display:none; font-size: 15px; padding-left: 4px;">
+                  <i class="fa-solid fa-circle-exclamation pe-1"></i>Debe ingresar el monto
+                </span>
                         </div>
 
                         <div class="mb-2 col-12">
                             <label for="Descripcion" class="form-label fw-bold">Descripcion *</label>
                             <input type="text" class="form-control" id="CuentaCorrienteDescripcion" style="text-transform: uppercase">
+                            <span id="errorMensajeDescripcion"
+                                    style="color:red; display:none; font-size: 15px; padding-left: 4px;">
+                                    <i class="fa-solid fa-circle-exclamation pe-1"></i>Debe ingresar una descripcion
+                                </span>
                         </div>
 
-                        <div class="mb-2 col-12">
-                            <label for="Fecha" class="form-label fw-bold">Fecha *</label>
-                            <input type="datetime-local" class="form-control" id="CuentaCorrienteFecha">
-                        </div>
+                         <div class="mb-2 col-12">
+                                <label for="Fecha" class="form-label fw-bold">Fecha *</label>
+                                <input type="datetime-local" class="form-control" id="CuentaCorrienteFecha"
+                                    value="@DateTime.Now.ToString("yyyy-MM-dd HH:mm")" />
+                                    <span id="errorMensajeFecha"
+                                    style="color:red; display:none; font-size: 15px; padding-left: 4px;">
+                                    <i class="fa-solid fa-circle-exclamation pe-1"></i>Debe ingresar una fecha
+                                </span>
+                            </div>
                     </div>
                 </form>
             </div>
