--- a/ClubSoft/Views/Shared/_Layout.cshtml
+++ b/ClubSoft/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                     <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Personas"
                         asp-action="Index"><i class="fas fa-users pe-2"></i>Personas</a>
                         <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="CuentaCorrientes"
-                        asp-action="Index"><i class="fas fa-users pe-2"></i>CuentaCorrientes</a>
+                        asp-action="Index"><i class="fa-solid fa-pen-to-square pe-2"></i>Cuentas Corrientes</a>
 
                     <!-- Dropdown para Eventos -->
                     <div class="list-group-item p-0">
