--- a/ClubSoft/Views/Provincias/Index.cshtml
+++ b/ClubSoft/Views/Provincias/Index.cshtml
@@ -8,14 +8,14 @@
       <h4>Agregar Nueva Provincia<i class="ms-2 fa-solid fa-square-plus"></i></h4>
       <input type="hidden" id="ProvinciaID" value="0" />
       <div class="col-md-3">
-        <input type="text" class="form-control" id="ProvinciaNombre" style="text-transform:uppercase"
+        <input type="text" class="form-control shadow-sm" id="ProvinciaNombre" style="text-transform:uppercase"
           placeholder="Ingrese la provincia">
         <span id="errorMensaje" style="color:red; display:none; font-size: 15px; padding-left: 4px;">
           <i class="fa-solid fa-circle-exclamation pe-1"></i>Debe ingresar una provincia
           </span>
       </div>
       <div class="col-md-3">
-        <button type="button" onclick="GuardarRegistro()" class="btn boton-color">Guardar</button>
+        <button type="button" onclick="GuardarRegistro()" class="btn boton-color shadow-sm">Guardar</button>
       </div>
   </div>
 </div>
