--- a/ClubSoft/Views/TipoEventos/Index.cshtml
+++ b/ClubSoft/Views/TipoEventos/Index.cshtml
@@ -10,9 +10,9 @@
       <h4>Agregar Nuevo Tipo de Evento<i class="ms-2 fa-solid fa-square-plus"></i></h4>
       <input type="hidden" id="TipoEventoID" value="0" />
       <div class="d-flex align-items-center">
-        <input type="text" class="form-control me-2" id="TipoEventoNombre" style="text-transform:uppercase"
+        <input type="text" class="form-control me-2 shadow-sm" id="TipoEventoNombre" style="text-transform:uppercase"
           placeholder="Ingrese el nombre del evento">
-        <button type="button" onclick="GuardarRegistro()" class="btn boton-color">Guardar</button>
+        <button type="button" onclick="GuardarRegistro()" class="btn boton-color shadow-sm">Guardar</button>
       </div>
       <span id="errorMensaje" style="color:red; display:none; font-size: 15px; padding-left: 4px;">
         <i class="fa-solid fa-circle-exclamation pe-1"></i>Debe ingresar un tipo de evento
@@ -23,9 +23,9 @@
       <h4>Agregar Nuevo Lugar<i class="ms-2 fa-solid fa-square-plus"></i></h4>
       <input type="hidden" id="LugarID" value="0" />
       <div class="d-flex align-items-center">
-        <input type="text" class="form-control me-2" id="LugarNombre" style="text-transform:uppercase"
+        <input type="text" class="form-control me-2 shadow-sm" id="LugarNombre" style="text-transform:uppercase"
           placeholder="Ingrese el lugar del evento">
-        <button type="button" onclick="GuardarRegistroLugar()" class="btn boton-color">Guardar</button>
+        <button type="button" onclick="GuardarRegistroLugar()" class="btn boton-color shadow-sm">Guardar</button>
       </div>
       <span id="errorMensajeLugar" style="color:red; display:none; font-size: 15px; padding-left: 4px;">
         <i class="fa-solid fa-circle-exclamation pe-1"></i>Debe ingresar un lugar
