--- a/ClubSoft/Views/TipoProductos/Index.cshtml
+++ b/ClubSoft/Views/TipoProductos/Index.cshtml
@@ -9,14 +9,14 @@
       <h4>Agregar Nuevo Tipo de Producto<i class="ms-2 fa-solid fa-square-plus"></i></h4>
       <input type="hidden" id="TipoProductoID" value="0" />
       <div class="col-md-3">
-        <input type="text" class="form-control" id="TipoProductoNombre" style="text-transform:uppercase"
+        <input type="text" class="form-control shadow-sm" id="TipoProductoNombre" style="text-transform:uppercase"
           placeholder="Nombre del tipo de producto">
         <span id="errorMensaje" style="color:red; display:none; font-size: 15px; padding-left: 4px;">
           <i class="fa-solid fa-circle-exclamation pe-1"></i>Debe ingresar un valor
           </span>  
       </div>
       <div class="col-md-3">
-        <button type="button" onclick="GuardarRegistro()" class="btn boton-color">Guardar</button>
+        <button type="button" onclick="GuardarRegistro()" class="btn boton-color shadow-sm">Guardar</button>
       </div>
   </div>
 </div>
