--- a/ClubSoft/Views/Personas/Index.cshtml
+++ b/ClubSoft/Views/Personas/Index.cshtml
@@ -16,7 +16,7 @@
                         <i class="fa-solid fa-plus fa-2x"></i>
                     </button>
                     <div class="search shadow-sm">
-                        <input type="text" class="form-control" placeholder="Buscar...">
+                        <input type="text" class="form-control" id="searchInput" placeholder="Buscar por nombre...">
                         <button class="btn btn-primary"><i class="fa fa-search"></i></button>
                     </div>
                 </div>
