--- a/ClubSoft/Views/Ventas/Index.cshtml
+++ b/ClubSoft/Views/Ventas/Index.cshtml
@@ -66,9 +66,14 @@
                                 </div>
                 </div>
                 <div class="mb-2 col-md-4">
-                  <label for="Producto" class="form-label fw-bold">Producto</label>
-                  <input type="text" class="form-control" id="Producto" style="text-transform: uppercase"
-                    placeholder="">
+                  <label for="ProductoID" class="form-label fw-bold">Producto</label>
+                  <div class="input-group">
+                                    @Html.DropDownList("ProductoID", null, htmlAttributes: new
+                                        {
+                                            @class =
+                                             "form-control"
+                                        })
+                                </div>
                 </div>
                 <div class="mb-2 col-md-2">
                   <label for="Cantidad" class="form-label fw-bold">Cantidad</label>
@@ -76,9 +81,7 @@
                     placeholder="">
                 </div>
                 <div class="mb-2 col-md-2 d-flex align-items-end">
-                  <button type="button" class="btn boton-color">
-                    Agregar Producto
-                  </button>
+                  <button type="button" onclick="AgregarProducto()" class="btn boton-color">Agregar Producto</button>
                 </div>
                 <div class="mb-2 col-md-5">
                   <label for="Cliente" class="form-label fw-bold">Cliente</label>
@@ -88,7 +91,7 @@
                   <h5><b>Productos vendidos hasta el momento</b></h5>
                 </div>
                 <div class="mb-2 col-md-4 text-end">
-                  <button type="button" class="btn boton-color" onclick="()">
+                  <button type="button" class="btn boton-color" onclick="ComfirmarVenta()">
                     Confirmar Venta
                   </button>
                   <button type="button" class="btn boton-color" onclick="()">
