--- a/ClubSoft/Views/Personas/Index.cshtml
+++ b/ClubSoft/Views/Personas/Index.cshtml
@@ -20,7 +20,7 @@
                 </div>
             </div>
             <div class="card-body mb-5">
-                <div class="table-responsive" style="height: 450px; overflow-y: auto;">
+                <div class="table-responsive" style="height: 450 px; overflow-y: auto;">
                     <table class="table table-hover align-middle">
                         <thead>
                             <tr>
@@ -37,7 +37,7 @@
                         <tbody id="tbody-Personas">
                         </tbody>
                     </table>
-                </div>
+                </div>      
             </div>
         </div>
     </div>
@@ -48,8 +48,8 @@
             <div class="modal-content container-modal">
                 <div class="modal-header">
                     <h5 class="modal-title text-color" id="ModalTitulo">Personas</h5>
-                   <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
-                     aria-label="Close" onclick="LimpiarModal()"></button>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"
+                        onclick="LimpiarModal()"></button>
                 </div>
                 <div class="modal-body">
                     <form>
@@ -115,7 +115,7 @@
                                              "form-control"
                                         })
                                     @* <a class="btn btn-primary boton-color" type="button" id="button-addon2"
-                                        asp-controller="Localidades" asp-action="Index">Agregar nueva +</a> *@
+                                    asp-controller="Localidades" asp-action="Index">Agregar nueva +</a> *@
                                 </div>
                                 <span id="errorMensajeLocalidad"
                                     style="color:red; display:none; font-size: 15px; padding-left: 4px;">
@@ -124,7 +124,7 @@
                             </div>
 
                             <hr class="mt-3">
-                            
+
                             <input type="hidden" id="UsuarioID" value="0" />
                             <div class="mb-2 col-md-6">
                                 <label for="Direccion" class="form-label fw-bold">Email *</label>
@@ -137,7 +137,8 @@
 
                             <div class="mb-2 col-md-6">
                                 <label for="Direccion" class="form-label fw-bold">Contraseña *</label>
-                                <input type="password" class="form-control" id="PersonaContraseña" autocomplete="new-password">
+                                <input type="password" class="form-control" id="PersonaContraseña"
+                                    autocomplete="new-password">
                                 <span id="errorMensajeContraseña"
                                     style="color:red; display:none; font-size: 15px; padding-left: 4px;">
                                     <i class="fa-solid fa-circle-exclamation pe-1"></i>Debe ingresar un email
