--- a/ClubSoft/Views/Personas/Index.cshtml
+++ b/ClubSoft/Views/Personas/Index.cshtml
@@ -24,9 +24,9 @@
                     <h3 class="m-0"><i class="fa-solid fa-table pe-2"></i>PERSONAS</h3>
                 </div>
             </div>
-            <div class="card-body mb-5">
-                <div class="table-responsive" style="height: 450 px; overflow-y: auto;">
-                    <table class="table table-hover align-middle">
+            <div class="card-body">
+                <div class="table-responsive"  overflow-y: auto;">
+                    <table class="table table-hover align-middle" style="min-height: 450 px">
                         <thead>
                             <tr>
                                 <th>Apellido y Nombre</th>
@@ -44,6 +44,7 @@
                     </table>
                 </div>      
             </div>
+            <div id="paginacion" class="card-footer"></div>
         </div>
     </div>
 
