tablas socios, cobro y ventas

--- a/ClubSoft/Views/Shared/_Layout.cshtml
+++ b/ClubSoft/Views/Shared/_Layout.cshtml
@@ -133,6 +133,11 @@
     <script src="~/js/scripts.js"></script>
     <script src="~/fontawesome/js/all.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <script src="~/js/jspdf/jspdf.min.js"></script>
+    <script src="~/js/jspdf/jspdf.debug.js"></script>
+    <script src="~/js/jspdf/jspdf.plugin.autotable.js"></script>
+
     <script src="~/js/jquery/jquery-3.7.1.min.js"></script>
     <script src="~/js/jquery/jquery-ui.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
