--- a/ClubSoft/Views/Personas/Index.cshtml
+++ b/ClubSoft/Views/Personas/Index.cshtml
@@ -17,8 +17,10 @@
                     </button>
                     <div class="search shadow-sm">
                         <input type="text" class="form-control" id="searchInput" placeholder="Buscar por nombre...">
-                        <button class="btn btn-primary"><i class="fa fa-search"></i></button>
+                        <button class="btn btn-primary "><i class="fa fa-search"></i></button>
+
                     </div>
+                    <button class="btn btn-primary boton-imprimir" onclick="Imprimir()"><i class="fa-solid fa-print"></i></button>
                 </div>
                 <div class="col-md-4 text-end d-flex align-items-center justify-content-end">
                     <h3 class="m-0"><i class="fa-solid fa-table pe-2"></i>PERSONAS</h3>
@@ -26,7 +28,7 @@
             </div>
             <div class="card-body mb-5">
                 <div class="table-responsive" style="height: 450 px; overflow-y: auto;">
-                    <table class="table table-hover align-middle">
+                    <table id="tabla-imprimir" class="table table-hover align-middle">
                         <thead>
                             <tr>
                                 <th>Apellido y Nombre</th>
