--- a/ClubSoft/wwwroot/css/Productos.css
+++ b/ClubSoft/wwwroot/css/Productos.css
@@ -40,3 +40,8 @@
 .text-color {
 color: white;
 }
+
+#SocioTitularID:disabled {
+  cursor: not-allowed; /* Cambia el cursor a "no permitido" */
+  background-color: #e9ecef;
+}
