--- a/ClubSoft/Views/Personas/Index.cshtml
+++ b/ClubSoft/Views/Personas/Index.cshtml
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="~/css/Personas.css" asp-append-version="true" />
 
 <div class="p-3">
-    
+
     @*TABLA*@
     <div class="mt-2" style="heigth: 100%;">
         <div class="card shadow-sm">
@@ -20,15 +20,16 @@
                         <button class="btn btn-primary "><i class="fa fa-search"></i></button>
 
                     </div>
-                    <button class="btn btn-primary boton-imprimir" onclick="Imprimir()"><i class="fa-solid fa-print"></i></button>
+                    <button class="btn btn-primary boton-imprimir" onclick="Imprimir()"><i
+                            class="fa-solid fa-print"></i></button>
                 </div>
                 <div class="col-md-4 text-end d-flex align-items-center justify-content-end">
                     <h3 class="m-0"><i class="fa-solid fa-table pe-2"></i>PERSONAS</h3>
                 </div>
             </div>
             <div class="card-body">
-                <div class="table-responsive"  overflow-y: auto;">
-                    <table  id="tabla-imprimir" class="table table-hover align-middle" style="min-height: 450 px">
+                <div class="table-responsive" overflow-y: auto;">
+                    <table id="tabla-imprimir" class="table table-hover align-middle" style="min-height: 450 px">
                         <thead>
                             <tr>
                                 <th>Apellido y Nombre</th>
@@ -44,7 +45,7 @@
                         <tbody id="tbody-Personas">
                         </tbody>
                     </table>
-                </div>      
+                </div>
             </div>
             <div id="paginacion" class="card-footer"></div>
         </div>
@@ -122,8 +123,6 @@
                                             @class =
                                              "form-control"
                                         })
-                                    @* <a class="btn btn-primary boton-color" type="button" id="button-addon2"
-                                    asp-controller="Localidades" asp-action="Index">Agregar nueva +</a> *@
                                 </div>
                                 <span id="errorMensajeLocalidad"
                                     style="color:red; display:none; font-size: 15px; padding-left: 4px;">
@@ -135,7 +134,7 @@
 
                             <input type="hidden" id="UsuarioID" value="0" />
                             <div class="mb-2 col-md-6">
-                                <label for="Direccion" class="form-label fw-bold">Email *</label>
+                                <label for="PersonaEmail" class="form-label fw-bold">Email *</label>
                                 <input type="text" class="form-control" id="PersonaEmail" autocomplete="new-text">
                                 <span id="errorMensajeEmail"
                                     style="color:red; display:none; font-size: 15px; padding-left: 4px;">
@@ -144,7 +143,7 @@
                             </div>
 
                             <div class="mb-2 col-md-6">
-                                <label for="Direccion" class="form-label fw-bold">Contraseña *</label>
+                                <label for="PersonaContraseña" class="form-label fw-bold">Contraseña *</label>
                                 <input type="password" class="form-control" id="PersonaContraseña"
                                     autocomplete="new-password">
                                 <span id="errorMensajeContraseña"
@@ -154,7 +153,7 @@
                             </div>
 
                             <div class="mb-2 col-md-6">
-                                <label for="Direccion" class="form-label fw-bold">UserName *</label>
+                                <label for="PersonaUserName" class="form-label fw-bold">UserName *</label>
                                 <input type="text" class="form-control" id="PersonaUserName"
                                     style="text-transform: uppercase" placeholder="">
                                 <span id="errorMensajeUserName"
@@ -166,10 +165,11 @@
                             <div class="mb-2 col-md-6">
                                 <label for="RolID" class="form-label fw-bold">Rol *</label>
                                 <div class="input-group">
-                                    @Html.DropDownList("RolID", null, htmlAttributes: new
+                                    @Html.DropDownList("RolID", null, new
                                         {
-                                            @class =
-                                             "form-control"
+                                            @class = "form-control",
+                                            @id = "RolID",
+                                            @onchange = "toggleTipoSocio()"
                                         })
                                 </div>
                                 <span id="errorMensajeRol"
@@ -178,6 +178,45 @@
                                 </span>
                             </div>
 
+                            <!-- Sección Socio -->
+                            <div id="tipoSocioSection" style="display:none;">
+                                <hr class="mt-3">
+                                <div class="row">
+                                    <div class="mb-2 col-md-6">
+                                        <label for="TipoSocio" class="form-label fw-bold">Tipo de socio *</label>
+                                        <div class="input-group">
+                                            <select class="form-control" id="TipoSocio" onchange="toggleSocioTitular()">
+                                                <option value="0">[SELECCIONE]</option>
+                                                <option value="1">TITULAR</option>
+                                                <option value="2">ADHERENTE</option>
+                                            </select>
+                                        </div>
+                                        <span id="errorMensajeTipoSocio"
+                                            style="color:red; display:none; font-size: 15px; padding-left: 4px;">
+                                            <i class="fa-solid fa-circle-exclamation pe-1"></i>Debe seleccionar un
+                                            registro
+                                        </span>
+                                    </div>
+
+                                    <div class="mb-2 col-md-6">
+                                        <label for="SocioTitularID" class="form-label fw-bold">Socio Titular *</label>
+                                        <div class="input-group">
+                                            @Html.DropDownList("SocioTitularID", null, htmlAttributes: new
+                                                {
+                                                    @class =
+                                                     "form-control",
+                                                    @id = "SocioTitularID",
+                                                    @disabled = "disabled"
+                                                })
+                                        </div>
+                                        <span id="errorMensajeSocioTitular"
+                                            style="color:red; display:none; font-size: 15px; padding-left: 4px;">
+                                            <i class="fa-solid fa-circle-exclamation pe-1"></i>Debe seleccionar un
+                                            registro
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </form>
                 </div>
